
Main Goals for 1.0 Release

   * MOL2 and CML file formats

   * Generalized volumetric rendering: (1) mesh (2) solid (3) colormaps

   * Integrated tutorial/demonstration system

   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems, etc).
     sometimes it just fails period

Changes up to 0.88

   * roving feature

   * overhauled color menu, improved performance of rainbow and color by chain

   * added color space menu

   * added color space clamping to better enable CMYK color matching as well
     as improve rendering quality

   * added z-ordered transparency (WOW!) with menu control

   * finished session save support for ramps and gadgets

   * debugged and tested Quadro hardware support

   * Added mouse_scale and mouse_limit settings.  Reduced "jumping" of virtual trackball.

   * Worked to resolve threading issues with multiple demanding
     clients...some progress made, but not a 100% solution yet.

   * Finally fixed sporadic "GC object already in linked list" bug

   * huge cleanup of code to eliminate compiler warnings on VisualC
     and Windows & GCC32
      - at least one bug fixed
      - more careful handling of precision 

   * updated acknowledgements in the README file

   * Tcl/Tk external gui now also follows -X, -Y, -W, and -V window parameters
     "-V value" controls the size of the external Tcl/Tk GUI (if present)

   * INCOMPABILITY WARNING: "-X" option for launching rpcserver changed to "-R"
	in order to make room for "-X" and "-Y" options for positioning GLUT window.

   * command line options: "-X value" and "-Y value" along with 
	"-W value" and "-H value" can now be used to determine the position and size
	of the GLUT OpenGL window.

   * fixed session restore bug with editing mode

   * worked around Solaris compiler limitations.


Changes up to 0.87

   * improved launch speed by hard-coding sphere definitions
